# rriv-cli-client

./: CMakeLists.txt  Cmd.cpp  Cmd.h  README.md  compile.sh  example_project.cpp  rriv-cli.cpp
demo-files/: command.txt  slot-config.json  test.txt
lib/: CMakeLists.txt  Cmd.cpp  Cmd.h
